  Enblend and Enfuse automatically convert from 16-bit to 8-bit before
  writing the JPEG file.

- Compilation without image cache works again
  ("--disable-image-cache").  Speedups of up to 30% have been reported
  on the amd64 architecture.

- Lots of new warnings if a command-line option has no effect, like,
  for example, combining a mask optimization option with
  "--no-optimize".

- Enblend and Enfuse read multi-layer TIFF files ("multi directory" in
  TIFF jargon).  It is even possible to mix multi-layer with single
  layer images.  This partially fixes SourceForge bug ID 1170329.

- Save masks with (lossless) "Deflate" compression.

- An improved wrap-around option, formerly only "-w", now "-wMODE" and
  "--wrap=MODE", lets the user determine whether to create a 360
  degrees horizontal or vertical panorama.  It is possible to wrap
  around vertically and horizontally at the same time.

- Without any output filename given, i.e. no "-o" option, the output
  filename now defaults to "a.tif", making "-o" truly an option.

- Use OpenMP to make better use of multi-processor machines.  As the
  image cache is not reentrant, OpenMP can only be activated when the
  image cache is disabled.

- Enblend and Enfuse issue messages following the GNU standard.


** Bug Fixes

- Fix the calculation of the number of blending levels.  Previously,
  it was off by one in most cases.

- A longstanding bug (SourceForge ID 2160427) in the primary seam line
  generation that caused a sub-optimal seam line was fixed.  As a side
  effect the new seam line algorithm is at least 20% faster than the
  old one.

- Fix a well hidden but serious bug in the seam line optimization.
  Both, the GPU and non-GPU versions of the optimizer were affected.

- Make Enblend and Enfuse aware of the input images' resolution.  Use
  the input resolution in the output file.

  With this change masks get the correct offsets.  This fixes the bug