@@ -1,4 +1,4 @@
-@set UPDATED 10 September 2009
+@set UPDATED 15 September 2009
 @set UPDATED-MONTH September 2009
-@set EDITION 4.0-b1496f879e25
-@set VERSION 4.0-b1496f879e25
+@set EDITION 4.0-07128825447c
+@set VERSION 4.0-07128825447c
